[CSS] add rule to hide .xfRequired for .xfOutput [forms] fixed small layout issues in Controls & ControlsInput.xhtml

--- a/web/src/main/webapp/resources/styles/xforms.less
+++ b/web/src/main/webapp/resources/styles/xforms.less
@@ -77,6 +77,10 @@
     content: '*';
     color: @requiredColor;
 }
+.xfOutput.xfRequired > .xfLabel:after,
+.xfOutput.xfRequired > .bfTableLabel:after {
+    content: '';
+}
 
 .xfRequired .xfValue .xfLabel {
 /*background:url(../images/required.gif) no-repeat left top;*/
